      13) Changed "no color" buttons to background vice background2 (white).
          Setting -bg <color> on command line switch now controls the "no color"
          value for the macro buttons.
      14) Fixed macro timer to properly reset if <TIMER> re-invoked during
          timeout period.
      15) Fixed broken access to on-line subscriber Hamlog data base
      
3.02
      1) Added hamlib interface for rig control
      2) Improved rigCAT serial communications on Windows

3.01
      1) Compile switch changes for OS-X
      2) Corrected serial port discovery on Windows
      
3.0   1) Added EXEC macro
      2) Added mousewheel over Macro buttons to move between macro button sets.
      3) Fixed bug in Olivia signal level display.
      4) Ported to Windows (win32) and OS-X
      5) Added floating digiscope and / or fixed scope abutting waterfall
         specified with command line switch --twoscopes
         Default is floating digiscope without the fixed scope
      6) Added save as png to mfsk-pic reception
      7) Added RTTY Baudot Unshift-On-Space configuration for Rx and Tx
      8) Modified mouse wheel handler to accommodate horizontal or vertical 
         squelch slider.
      9) Call scopeview->size_range when the floating digiscope changes mode;
         so that the phase and crosshair rtty scope should maintain aspect 
         ratio.
     10) Modified the Ctrl+Left/Right mouse button combo to not drag the marker.
     11) Deprecate the --resample switch in favour of the new menu in the Audio
         Settings tab. Move sound initialisation code out of configuration.cxx
         and into soundconf.cxx. Make Native the default sample rate selection.
     12) Changed the main window's callback and the File->Exit handler to not
         exit() but, rather, hide the windows so that Fl::run will return and
         main can clean up. (fix for Sig 11 faults at exit).
     13) Rename jpeg.m4 to images.m4 and extend it to also detect libpng. Make